Hell-Ya tica default (don't override if they set it). Remove underline for links so its just colored text.

--- a/evil.css
+++ b/evil.css
@@ -52,3 +52,11 @@ html {
     height: 100.1% !important;
     width: 100.1% !important;
 }
+
+html {
+    font-family: Helvetica;
+}
+
+a {
+    text-decoration: inherit;
+}
